samples/_failures_safe/1761449528_944a40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8dcd9c78.c: In function ‘main’:
./samples/SAFE/__tmp_8dcd9c78.c:161:75: error: expected ‘)’ at end of input
  161 |     if (compress_data(input_data, file_size, output_data, &compressed_size
      |                      ~                                                    ^
      |                                                                           )
./samples/SAFE/__tmp_8dcd9c78.c:161:5: error: expected declaration or statement at end of input
  161 |     if (compress_data(input_data, file_size, output_data, &compressed_size
      |     ^~
